syntax = "proto3";
package msgproto.msg;
option go_package = "github.com/sydneyowl/clh-server/msgproto";

message Command{
  string command_id = 1;
  string command = 2;
  repeated string params = 3;
}

message CommandResponse{
  string command_id = 1;
  bool success = 2;
  string result = 3;
}