syntax = "proto3";
package msgproto.msg;
option go_package = "github.com/sydneyowl/clh-server/msgproto";


message RigData{
  string provider = 1;
  string rig_name = 2;
  uint64 frequency = 3;
  string mode = 4;
  uint64 frequency_rx = 5;
  string mode_rx = 6;
  bool split = 7;
  uint32 power = 8;
}